--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -42,6 +42,9 @@ jobs:
           runTests: false
           build: yarn run build
 
+      - name: Install chromium
+        run: apk add --no-cache chromium
+
       - name: Save build folder
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
@@ -73,7 +76,8 @@ jobs:
         with:
           name: dist
           path: dist
-
+      - name: Install chromium
+        run: apk add --no-cache chromium
       - name: Set Percy command based on PR draft status or main branch
         shell: bash
         run: |
@@ -133,7 +137,8 @@ jobs:
         with:
           name: dist
           path: dist
-
+      - name: Install chromium
+        run: apk add --no-cache chromium
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
