--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "ajv-formats": "3.0.1",
     "ajv-formats-draft2019": "1.6.1",
     "axios": "1.10.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "classnames": "2.5.1",
     "cypress-parallel": "0.15.0",
     "date-fns": "4.1.0",
