--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "jest-mock-axios": "4.8.0",
     "jest-preview": "0.3.1",
     "js-levenshtein": "1.1.6",
-    "jsdom": "26.1.0",
+    "jsdom": "patch:jsdom@npm%3A26.1.0#~/.yarn/patches/jsdom-npm-26.1.0-3857255f02.patch",
     "lint-staged": "16.1.2",
     "mime": "4.0.7",
     "mini-css-extract-plugin": "2.9.2",
@@ -213,5 +213,8 @@
         "timeout": 30000
       }
     }
+  },
+  "resolutions": {
+    "jsdom@npm:^26.1.0": "patch:jsdom@npm%3A26.1.0#~/.yarn/patches/jsdom-npm-26.1.0-3857255f02.patch"
   }
 }
