Error PR actions workflow when run by non-contributor

--- a/.github/workflows/pr-actions.yml
+++ b/.github/workflows/pr-actions.yml
@@ -12,6 +12,18 @@ jobs:
       pull-requests: write
       contents: write
     steps:
+      - name: Check if comment author is a contributor
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          comment_author="${{ github.event.comment.user.login }}"
+          if gh api repos/${{ github.repository }}/collaborators/$comment_author --silent; then
+            echo "Comment author ($comment_author) is a contributor, continuing"
+          else
+            echo "Comment author ($comment_author) is not a contributor, skipping job"
+            exit 1
+          fi
+
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
           ref: ${{ format('refs/pull/{0}/head', github.event.issue.number) }}
