--- a/.github/workflows/auto-backport.yml
+++ b/.github/workflows/auto-backport.yml
@@ -3,7 +3,7 @@ name: Auto Backport PR
 on:
   pull_request:
     types: [closed]
-    branches: [main]
+    branches: [auto-backport-demo]
 
 jobs:
   backport:
