--- a/package.json
+++ b/package.json
@@ -77,12 +77,13 @@
     "cypress-multi-reporters": "2.0.5",
     "cypress-network-idle": "1.15.0",
     "cypress-plugin-tab": "1.0.5",
-    "cypress-terminal-report": "^7.2.1",
+    "cypress-terminal-report": "7.2.1",
     "cypress-wait-until": "3.0.2",
     "dotenv": "17.2.2",
     "esbuild-loader": "4.3.0",
     "eslint": "9.35.0",
     "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-css-modules": "2.12.0",
     "eslint-plugin-cypress": "5.1.1",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
@@ -102,7 +103,7 @@
     "http-server": "14.1.1",
     "husky": "9.1.7",
     "identity-obj-proxy": "3.0.0",
-    "jest": "30.1.3",
+    "jest": "30.0.5",
     "jest-environment-jsdom": "30.1.2",
     "jest-junit": "16.0.0",
     "jest-mock-axios": "4.9.0",
@@ -133,20 +134,20 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.12.1",
-    "@cypress/snapshot": "^2.1.7",
+    "@cypress/snapshot": "2.1.7",
     "@date-fns/tz": "1.4.1",
     "@digdir/designsystemet-css": "1.1.10",
     "@digdir/designsystemet-react": "1.1.10",
     "@digdir/designsystemet-theme": "1.1.10",
     "@navikt/aksel-icons": "7.30.1",
     "@tanstack/react-query": "5.87.4",
-    "@types/cypress": "^1.1.6",
+    "@types/cypress": "1.1.6",
     "ajv": "8.17.1",
     "ajv-errors": "3.0.0",
     "ajv-formats": "3.0.1",
     "ajv-formats-draft2019": "1.6.1",
     "axios": "1.12.2",
-    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
     "classnames": "2.5.1",
     "cypress-parallel": "0.15.0",
     "date-fns": "4.1.0",
