--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "license": "3-Clause BSD",
   "exports": "./src/index.tsx",
   "scripts": {
+    "devtest": "webpack --watch & chokidar 'src/layout/**/config.ts' -c 'yarn gen'",
     "postinstall": "husky",
     "cy:all": "tsx scripts/cypress-run-all.ts",
     "gen": "scripts/codegen.sh",
     "gen:watch": "scripts/codegen.sh watch",
     "copy-schemas": "tsx scripts/copy-schemas.ts",
     "start": "./scripts/dev-with-watch.sh",
+    "startchok": "yarn gen && (FORCE_COLOR=1 cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress --color & yarn chokidar 'src/layout/**/config.ts' src/codegen -c 'yarn gen')",
     "build": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
     "docker": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && yarn serve 8080",
     "serve": "http-server dist --cors='*' -p",
@@ -67,7 +69,8 @@
     "axe-core": "4.10.3",
     "babel-jest": "30.0.5",
     "babel-loader": "10.0.0",
-    "caniuse-lite": "1.0.30001737",
+    "caniuse-lite": "1.0.30001741",
+    "chokidar-cli": "^3.0.0",
     "core-js": "3.45.1",
     "cross-env": "10.0.0",
     "css-loader": "7.1.2",
