--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
   "license": "3-Clause BSD",
   "exports": "./src/index.tsx",
   "scripts": {
-    "devtest": "webpack --watch & chokidar 'src/layout/**/config.ts' -c 'yarn gen'",
     "postinstall": "husky",
     "cy:all": "tsx scripts/cypress-run-all.ts",
-    "gen": "scripts/codegen.sh",
-    "gen:watch": "scripts/codegen.sh watch",
+    "gen": "tsx src/codegen/run.ts",
     "copy-schemas": "tsx scripts/copy-schemas.ts",
-    "start": "./scripts/dev-with-watch.sh",
-    "startchok": "yarn gen && (FORCE_COLOR=1 cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --color & yarn chokidar 'src/layout/**/config.ts' src/codegen -c 'yarn gen')",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
     "build": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
     "docker": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && yarn serve 8080",
     "serve": "http-server dist --cors='*' -p",
@@ -151,7 +148,6 @@
     "ajv-formats-draft2019": "1.6.1",
     "axios": "1.12.2",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
-    "chokidar": "4.0.3",
     "classnames": "2.5.1",
     "cypress-parallel": "0.15.0",
     "date-fns": "4.1.0",
