--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "babel-jest": "30.1.2",
     "babel-loader": "10.0.0",
     "caniuse-lite": "1.0.30001743",
-    "chokidar-cli": "^3.0.0",
+    "chokidar-cli": "3.0.0",
     "core-js": "3.45.1",
     "cross-env": "10.0.0",
     "css-loader": "7.1.2",
