Adding changes to map component from upstream/refactor/map

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/js-levenshtein": "1.1.3",
     "@types/json-schema": "7.0.15",
     "@types/leaflet": "1",
+    "@types/leaflet-draw": "^1",
     "@types/marked": "6.0.0",
     "@types/mime": "4.0.0",
     "@types/node": "22.18.8",
@@ -159,6 +160,7 @@
     "immer": "10.1.3",
     "jsonpointer": "5.0.1",
     "leaflet": "1.9.4",
+    "leaflet-draw": "^1.0.4",
     "lru-cache": "11.2.2",
     "marked": "16.3.0",
     "marked-mangle": "1.1.11",
@@ -171,6 +173,7 @@
     "react-dom": "19.2.0",
     "react-dropzone": "14.3.8",
     "react-leaflet": "5.0.0",
+    "react-leaflet-draw": "^0.21.0",
     "react-number-format": "5.4.4",
     "react-router-dom": "6.30.1",
     "react-toastify": "11.0.5",
