Major rewrite to support multiple document types (still no saving)

--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "react-number-format": "5.4.4",
     "react-router-dom": "6.30.1",
     "react-toastify": "11.0.5",
+    "slugify": "^1.6.6",
     "terraformer-wkt-parser": "1.2.1",
     "typescript": "5.9.3",
     "typescript-eslint": "8.46.2",
